--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@geist-ui/core": "^2.3.8",
     "@huggingface/inference": "^2.5.1",
-    "next": "14.0.3",
     "ai": "2.2.30",
+    "geist": "^1.2.0",
+    "next": "14.0.3",
     "react": "18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "sonner": "^1.3.1"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
